browse.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

html {
    scroll-behavior: smooth;
    background-color: #2b2a33;
    overflow-x: hidden;
}

li {
    list-style-type: none;
}

a {
    font-size: 18px;
    text-decoration: none;
}

h2 {
    font-weight: 900;
    font-size: 32px;
    padding-left: 8px;
    color: #2b2a33;
}

.click {
    cursor: pointer;
}

.green {
    color: #4aa584;
}

.row {
    max-width: 1200px;
    width: 100%;
    margin: 0 auto;
}

/*

    NAV

*/

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 12px 48px;
    background-color: #2e6853;
    letter-spacing: 0.5px;
}

.nav__logo {
    height: 44px;
    width: 44px;
    filter: invert(100%);
}

.nav__logo--wrapper {
    display: flex;
    align-items: center;
}

.nav__link--list {
    display: flex;
    align-items: center;
}

.nav__link {
    margin: 0 24px;
}

.nav__link:last-child {
    margin: 0 0 0 44px;
}

.nav__link--anchor {
    font-size: 18px;
    color: #e8eaed;
    font-weight: 600;
}

.link__hover-effect {
    position: relative;
}

.link__hover-effect--white:after {
    background-color: #e8eaed;
}

.link__hover-effect:hover:after {
    left: 0;
    width: 100%;
}

.link__hover-effect:after {
    content: "";
    position: absolute;
    bottom: -3px;
    height: 3px;
    right: 0;
    width: 0;
    transition: all 300ms ease;
}

.nav__link--btn {
    font-size: 18px;
    font-weight: 600;
    padding: 10px 44px;
    border-radius: 999px;
    border: 1px solid #42414d;
    color: #e8eaed;
    background-color: #2b2a33;
    box-shadow: 6px 6px 18px 0 rgb(0, 0, 0, 0.3);
    transition: all 300ms ease;
}

.btn__hover-effect--color:hover {
    background-color: #42414d;
    border: 1px solid #2b2a33;
    color: #ffffff;
}

/*

    HEADER

*/

#landing {
    padding-bottom: 48px;
}

.header {
    padding: 48px 96px 0 96px;
}

.header__content {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center;
}

.title {
    font-size: 42px;
    letter-spacing: 2px;
    color: #e8eaed;
    font-weight: 700;
}

.header__search--wrapper {
    margin: 40px 0 0 36px;
    max-width: 600px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.header__search {
    padding: 14px 32px 14px 32px;
    width: 580px;
    font-size: 26px;
    color: #8a8a8a;
    background-color: #2b2a33;
    border-radius: 55px;
    position: relative;
    border: solid 1px #42414d;
    box-shadow: 6px 6px 18px 0 rgb(0, 0, 0, 0.3);
    transition: all 300ms ease;
}

.header__search--wrapper:hover .header__search {
    border: solid 1px #2b2a33;
    background-color: #42414d;
}

.magnifying-glass {
    filter: invert(31%) sepia(57%) saturate(365%) hue-rotate(107deg) brightness(97%) contrast(90%);
    transition: all 300ms ease;
    height: 40px;
    width: 40px;
}

.header__search--wrapper:hover .magnifying-glass {
    filter: invert(77%) sepia(8%) saturate(2415%) hue-rotate(107deg) brightness(73%) contrast(86%);
}

.search-btn {
    right:74px;
    position: relative;
    height: 40px;
    width: 40px;
    border: none;
    background-color: transparent;
}

.movie-collage {
    z-index: -999;
    position: absolute;
    opacity: 0.10;
    height: 100%;
    width: 100%;
    max-height: 100vh;
    max-width: 100vw;
}

/*

    BROWSE MOVIES

*/

#browse {
    border-top: solid 1px #42414d;
}

.browse__container {
    margin-top: 16px;
}

.decor {
    background-color: #2b2a33;
    min-height: 650px;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.browse__title--wrapper {
    display: flex;
    justify-content: space-between;
    padding: 12px 24px;
}

.browse__title {
    color: #e8eaed;
}

#filter {
    font-weight: 500;
    color: #e8eaed;
    background-color: #2b2a33;
    border: 1px solid #42414d;
    border-radius: 12px;
    padding: 0 16px;
    transition: all 300ms ease;
    box-shadow: 6px 6px 18px 0 rgb(0, 0, 0, 0.3);
}

#filter:hover {
    border: 1px solid #2b2a33;
    background-color: #42414d;
}

.movie__list {
    padding: 24px 16px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.movie__wrapper {
    height: 100%;
    max-height: 400px;
    max-width: 260px;
    width: 100%;
    min-height: 400px;
    min-width: 260px;
    border-radius: 4px;
    display: flex;
    flex-direction: column;
    align-items: center;
    transition: all 300ms ease;
    position: relative;
    overflow: hidden;
    box-shadow: 0px 4px 26px 2px #8a8a8a1f;
}

.movie__wrapper:before {
    content: "";
    position: absolute;
    background-color: #2b2a33;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    transition: opacity 300ms ease;
    z-index: 2;
}

.movie {
    max-width: calc(25%);
    width: 100%;
    max-height: 400px;
    height: 100%;
    display: flex;
    justify-content: center;
    margin: 0 0 66px 0;
}

.movie:hover .movie__wrapper:before {
    opacity: 0.6;
    box-shadow: inset 6px 6px 3px 0 0px rgb(0, 0, 0, 0.9);
}

.movie:hover .movie__img {
    transform: scale(1.05);
    filter: blur(3px);
}

.movie:hover .movie__info {
    opacity: 1;
    transform: translateX(0%)

}

.movie__img {
    height: 100%;
    max-height: 480px;
    transition: all 300ms ease;
}

.movie__title {
    font-size: 22px;
}

.movie__info {
    color: #e8eaed;
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    padding: 18px;
    position: absolute;
    opacity: 0;
    z-index: 3;
    justify-content: space-between;
    transform: translateX(-100%);
    transition: transform 450ms, opacity 300ms;

}

.watch__btn {
    height: 48px;
    width: 100%;
    font-size: 16px;
    font-weight: 600;
    letter-spacing: 1px;
    border: none;
    color: #e8eaed;
    border-radius: 4px;
    background-color: #2e6853;
    transition: all 300ms ease;
}

.watch__btn:hover {
    background-color: #4aa584;
    color: #e8eaed;
    scale: 0.98;
}

.loading {
    background-color: #2e6853;
    height: 4px;
    width: 100vw;
    overflow-x: hidden;
    display: none;
}

.loading-animation {
    background-color: #4aa584;
    width: calc(50%);
    height: 4px;
    animation: left-to-right 1600ms infinite;
    display: none;
}

.loading__visible {
    display: flex;
}

.spinner {
    height: 90px;
    width: 90px;
    position: absolute;
    margin-top: 280px;
    z-index: 3;
    display: none;
    filter: invert(22%) sepia(5%) saturate(1462%) hue-rotate(206deg) brightness(100%) contrast(88%);
    animation: spin 600ms infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    
    100% {
        transform: rotate(360deg);
    }
}

@keyframes left-to-right {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(220%);
    }
}

/*

    FOOTER

*/

#footer {
    border-top: solid 1px #42414d;
    background-color: #2b2a33;
    padding-top: 36px;
}

.footer__container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.footer__logo {
    height: 38px;
    width: 38px;
    filter: invert(100%);
}

.footer__title {
    color: #2e6853;
    letter-spacing: 0.5px;
}

.logo__wrapper {
    display: flex;
    margin-bottom: 18px;
}

.links__list {
    display: flex;
}

.footer__link {
    padding: 12px 24px;
}

.link__item {
    color: #e8eaed;
    font-weight: 500;
    letter-spacing: 0.2px;
}

.copyright {
    color: #0e0e0f;
    font-size: 14px;
    margin: 12px;
}

/* 

    MENU 
    
*/

.menu__backdrop {
    padding: 6px;
    z-index: 100;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    display: none;
    position: absolute;
    align-items: center;
    justify-content: flex-start;
    flex-direction: column;
    border: 1px solid #42414d;
    background-color: #2b2a33;
    box-shadow: inset 6px 6px 18px 0 rgb(0, 0, 0, 0.3);
}

.fade-in {
    animation: fade-in 300ms ease-in-out;
}

.fade-out {
    animation: fade-out 300ms ease-in-out;
}

@keyframes fade-in {
    0% {
        opacity: 0;
        left: 120px;
    }
    20% {
        opacity: 0.2;
    }
    40% {
        opacity: 0.4;
    }
    60% {
        opacity: 0.6;
    }
    80% {
        opacity: 0.8;
    }
    100% {
        opacity: 1;
    }
}

@keyframes fade-out {
    0% {
        opacity: 1;
        left: 20px;
    }
    20% {
        opacity: 0.8;
        left: 40px;
    }
    40% {
        opacity: 0.6;
        left: 60px;
    }
    60% {
        opacity: 0.4;
        left: 80px;
    }
    80% {
        opacity: 0.2;
        left: 100px;
    }
    100% {
        opacity: 0;
        left: 120px;
    }
}

.menu__btn {
    background: transparent;
    border: none;
    display: none;
    height: 44px;
    width: 44px;
    transition: all 300ms ease;
}

.menu__open--image {
    transition: all 300ms ease;
    filter: invert(93%) sepia(6%) saturate(90%) hue-rotate(177deg) brightness(100%) contrast(93%);
    height: 100%;
    width: 100%;
}

.menu__btn:hover .menu__open--image {
    filter: invert(22%) sepia(15%) saturate(458%) hue-rotate(206deg) brightness(101%) contrast(90%);
}

.menu__list {
    margin-left: 8px;
    padding-bottom: 16px;
}

.menu__list--item {
    margin: 100px 0;
    text-align: center;
}


.menu__list--link {
    font-weight: 600;
    font-size: 56px;
    letter-spacing: 3px;
    color: #e8eaed;
}

.menu__btn--close {
    align-self: flex-end;
    margin: 12px 12px 0 0;
    height: 34px;
    width: 34px;
    display: flex;
    border: none;
    justify-content: center;
    align-items: center;
    background-color: transparent;
}

.menu__close--image {
    transition: all 300ms ease;
    height: 34px;
    width: 34px;
    filter: invert(98%) sepia(1%) saturate(511%) hue-rotate(181deg) brightness(99%) contrast(87%);
}

.menu__close--image:hover {
    filter: invert(49%) sepia(22%) saturate(258%) hue-rotate(207deg) brightness(92%) contrast(83%);
}

/*

    SCREEN SIZES

*/
@media (max-width: 480px) {

    .nav__link--list {
        visibility: hidden;
    }
    
    .header {
        padding: 36px 24px 0 24px;
    }
    .title {
        font-size: 36px;
        letter-spacing: 3px;
    }

    .browse__title--wrapper {
        display: flex;
    }

    #filter {
        max-width: 180px;
    }

    .browse__title {
        font-size: 22px;
    }

    .sub__title {
        margin-top: 36px;
        font-size: 22px;
    }

    .header__search--wrapper {
        position: relative;
        margin-left: 0;
    }
    .header__search {
        padding: 14px 60px 14px 20px;
        width: 330px;
        margin: 0;
        border-radius: 36px;
    }
    .search-btn {
        position: absolute;
        right: 8px;
        border: none;
        box-shadow: none;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .magnifying-glass {
        height: 24px;
        width: 24px;
    }

    .landing-img {
        height: 200px;
    }

    .menu__btn {
        width: 40px;
        height: 40px;
        display: flex;
    }

    .nav__link--list {
        width: 0px;
    }

    nav {
        padding: 0 24px;
    }

    .movie__list {
        display: flex;
        flex-direction: column;
    }
}

